--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Holive Woodworking</title>
     <link rel="stylesheet" href="./stylesheets/style.css">
 
+    <!------------------------------ Bootstrap core CSS ------------------------>
+    <link href="css/bootstrap.css" rel="stylesheet">
+
     <!------------------------------ Iionicons --------------------------------->
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
@@ -19,7 +22,6 @@
     <header>
         <div class="head">
             <img src="assets/img/Holive & Co. 2.svg" alt="logo" id="logo">
-            <!-- <h1><span class="brandTitle">Holive</span><span class="andCo"> &Co.</span><span class="brandTitle1">In wood we trust</span></h1> -->
         </div>
 
     </header>
@@ -66,19 +68,17 @@
 
        <div class="ourMission">
         <!-- --------------------------OUR MISSION-------------------------------------- -->
-        <section class="mainStage">
+        <section class="mainStage1">
             <h2 class="bannerMission">Our mission</h2>
 
-            <p class="interactiveText">Motivate</p>
-            <p class="interactiveText">Be green</p>
-            <p class="interactiveText">Supply</p>
+            <p class="interactiveText1">Motivate</p>
+            <p class="interactiveText2">Be green</p>
+            <p class="interactiveText3">Supply</p>
 
         </section>
-
-        <a href="#top" class="arrowUp"><ion-icon name="arrow-up"></ion-icon></a>
-
-
        </div>
+
+       <a href="#top" class="arrowUp"><ion-icon name="arrow-up"></ion-icon></a>
 
     </main>
 
@@ -112,6 +112,6 @@
 
         
     </footer>
-    
+<script src="js/bootstrap.js"></script>
 </body>
 </html>
