--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -7,6 +7,9 @@
     <title>Holive Woodworking</title>
     <link rel="stylesheet" href="../stylesheets/style.css">
 
+    <!------------------------------ Bootstrap core CSS ------------------------>
+    <link href="../css/bootstrap.css" rel="stylesheet">
+
      <!------------------------ Iionicons ------------------------->
      <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
      <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
