--- a/index.html
+++ b/index.html
@@ -54,12 +54,15 @@
        <div class="mainHome">
     
         <section class="phrase">
+
+            <div class="container">
+                <ul class="text-white text-end display-3" style="list-style: none;">
+                    <li class="bigPhrase">Learn with <span class="keyWord">us</span> </li>
+                    <li class="bigPhrase">Practice for <span class="keyWord">yourself</span></li>
+                    <li class="bigPhrase">Build for the <span class="keyWord">world.</span></li>
+                </ul>
+            </div>
     
-            <ul class="home" style="list-style: none;">
-                <li class="bigPhrase">Learn with <span class="keyWord">us</span> </li>
-                <li class="bigPhrase">Practice for <span class="keyWord">yourself</span></li>
-                <li class="bigPhrase">Build for the <span class="keyWord">world.</span></li>
-            </ul>
 
         </section>
 
