General BS update

--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
 
 
     <div class="nav">
-
         <!------------------------------- Tabla de nav ----------------------------->
         <nav class="navigationBox">
            <ul class="navigationBar">
@@ -38,8 +37,6 @@
                <li><a  href="pages/videos.html" class="navLink">Videos</a></li>
                <li><a  href="pages/contact-us.html" class="navLink">Contact us</a></li>
            </ul>
-
-           
        </nav>
 
     </div>   
@@ -72,11 +69,11 @@
        <div class="ourMission">
         <!-- --------------------------OUR MISSION-------------------------------------- -->
         <section class="mainStage1">
-            <h2 class="bannerMission">Our mission</h2>
+            <h2 class="bannerMission mb-4 titleBackground boxShadow borderColor">Our mission</h2>
 
-            <p class="interactiveText1">Motivate</p>
-            <p class="interactiveText2">Be green</p>
-            <p class="interactiveText3">Supply</p>
+            <p class="interactiveText1 borderColor">Motivate</p>
+            <p class="interactiveText2 borderColor">Be green</p>
+            <p class="interactiveText3 borderColor">Supply</p>
 
         </section>
        </div>
