--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -51,7 +51,7 @@
         <section>
 
             <form id="form" action="/ruta-destino" method="get" enctype="">
-                <fieldset class="contactDetails">
+                <fieldset class="contactDetails rounded">
                     <p class="formTitle">Contact details</p>
 
                     <div class="mb-3">
