CopyrR fix / interactiveT responsive

--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
        <div class="ourMission">
         <!-- --------------------------OUR MISSION-------------------------------------- -->
         <section class="mainStage1">
-            <h2 class="bannerMission mb-4 titleBackground boxShadow borderColor">Our mission</h2>
+            <h2 class="bannerMission mb-sm-4 titleBackground boxShadow borderColor">Our mission</h2>
 
-            <p class="interactiveText1 borderColor">Motivate</p>
-            <p class="interactiveText2 borderColor">Be green</p>
-            <p class="interactiveText3 borderColor">Supply</p>
+            <p class="interactiveText1 borderColor h-50">Motivate</p>
+            <p class="interactiveText2 borderColor h-50">Be green</p>
+            <p class="interactiveText3 borderColor h-50">Supply</p>
 
         </section>
        </div>
@@ -107,7 +107,7 @@
              </ul>
          </div>    
 
-        <p id="reference">Copyright Ⓒ 2021 holivewoodworking.com, Rheinland-pfalz Deutschland. All right reserved.</p>
+         <p class="text-center" id="reference">Copyright Ⓒ 2021 holivewoodworking.com, Rheinland-pfalz Deutschland. All right reserved.</p>
 
 
         
