--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -106,7 +106,7 @@
                 <li><a class=footerLink href="https://linkedin.com">Jobs</a></li>
                 <li><a class=footerLink href="#top">Go up</a></li>
             </ul>
-            <p id="reference">Copyright Ⓒ 2021 holivewoodworking.com, Rheinland-pfalz Deutschland. All right reserved.</p>
+            <p class="text-center" id="reference">Copyright Ⓒ 2021 holivewoodworking.com, Rheinland-pfalz Deutschland. All right reserved.</p>
         </div>
 
         <div>
