--- a/pages/courses.html
+++ b/pages/courses.html
@@ -99,7 +99,7 @@
         </section>
         <div class="pb-5 pt-5">
             <div class="card row text-center background-none border-0" style="width: 70%; margin: 0 auto; background: none;">
-                <div class="card-body myGradient rounded-pill boxShadow">
+                <div class="card-body myGradient rounded-3 boxShadow">
                   <h5 class="card-title display-6">Master the use of tools</h5>
                   <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore perferendis sed magni ipsum quasi qui repudiandae perspiciatis! Vitae sed dolore perspiciatis quos numquam pariatur possimus explicabo sunt molestiae eum fuga sit expedita, optio repudiandae assumenda minus. Vel odit omnis voluptatem praesentium quam voluptas nostrum facilis facere, quia doloribus sint saepe placeat, exercitationem explicabo minima unde accusantium aperiam porro! Blanditiis porro quo, quis culpa quisquam modi rem eum impedit id! Modi!</p>
                   <a href="#" class="btn boxShadow" id="buttonColorBackground">Tool up</a>
@@ -109,7 +109,7 @@
 
         <div class="pb-5">
             <div class="card row text-center" style="width: 70%; margin: 0 auto; background: none;">
-                <div class="card-body myGradient rounded-pill boxShadow">
+                <div class="card-body myGradient rounded-3 boxShadow">
                   <h5 class="card-title display-6">Surfboards & Furniture</h5>
                   <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente nobis a corrupti, cum nemo magnam accusamus tempora labore molestias sit quidem vero, error soluta placeat. Culpa quia quibusdam ex deserunt molestias, sunt aliquid, vero ab illo dolor quidem repellat alias quod, cum consectetur. Harum, qui voluptatem, totam laborum non reiciendis ullam consequatur sequi, quibusdam in error tempore debitis? Architecto provident voluptas, cum nihil cupiditate quae maxime ea quam necessitatibus expedita.</p>
                   <a href="#" class="btn boxShadow" id="buttonColorBackground">Catch the wave</a>
@@ -119,7 +119,7 @@
 
         <div class="pb-5">
             <div class="card row text-center" style="width: 70%; margin: 0 auto; background: none;">
-                <div class="card-body myGradient rounded-pill boxShadow">
+                <div class="card-body myGradient rounded-3 boxShadow">
                   <h5 class="card-title display-6">Working sustainable</h5>
                   <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum voluptatem blanditiis nulla earum, iure repellat deserunt alias. Nemo ratione provident optio nostrum debitis quaerat corporis est dignissimos eveniet atque non sequi illum accusantium quos vel, modi ab? Aperiam vitae nihil eligendi fugiat, ea earum dicta natus ipsa voluptates itaque adipisci ratione amet tenetur iure molestiae fuga provident, nulla delectus quidem omnis magnam officiis. Consequuntur nihil aliquid consectetur laudantium blanditiis ipsam?</p>
                   <a href="#" class="btn boxShadow" id="buttonColorBackground">Go green</a>
@@ -144,16 +144,16 @@
                 <li><a class=footerLink href="https://linkedin.com">Jobs</a></li>
                 <li><a class=footerLink href="#top">Go up</a></li>
             </ul>
-            <p id="reference">Copyright Ⓒ 2021 holivewoodworking.com, Rheinland-pfalz Deutschland. All right reserved.</p>
+            <p class="text-center" id="reference">Copyright Ⓒ 2021 holivewoodworking.com, Rheinland-pfalz Deutschland. All right reserved.</p>
         </div>
 
         <div>
             <ul class="footerMedia">
                 <li><a class="icons" href="https://facebook.com" id="facebookIcon"><ion-icon name="logo-facebook"></ion-icon></a></li>
-            <li><a class="icons" href="https://twitter.com" id="twitterIcon"><ion-icon name="logo-twitter" class="twitterIcon"></ion-icon></a></li>
-            <li><a class="icons" href="https://instagram.com" id="instagramIcon"><ion-icon name="logo-instagram" class="instagramIcon"></ion-icon></a></li>
-            <li><a class="icons" href="https://youtube.com" id="youtubeIcon"><ion-icon name="logo-youtube" class="youtubeIcon"></ion-icon></a></li>
-            <li><a class="icons" href="https://wa.link/ym8fwu" id="wppIcon"><ion-icon name="logo-whatsapp" class="wppIcon"></ion-icon></a></li>
+                <li><a class="icons" href="https://twitter.com" id="twitterIcon"><ion-icon name="logo-twitter" class="twitterIcon"></ion-icon></a></li>
+                <li><a class="icons" href="https://instagram.com" id="instagramIcon"><ion-icon name="logo-instagram" class="instagramIcon"></ion-icon></a></li>
+                <li><a class="icons" href="https://youtube.com" id="youtubeIcon"><ion-icon name="logo-youtube" class="youtubeIcon"></ion-icon></a></li>
+                <li><a class="icons" href="https://wa.link/ym8fwu" id="wppIcon"><ion-icon name="logo-whatsapp" class="wppIcon"></ion-icon></a></li>
             </ul>
         </div>
         
