--- a/pages/store.html
+++ b/pages/store.html
@@ -73,7 +73,7 @@
             </section>
         </div>
 
-        <a href="#top" class="arrowUp"><ion-icon name="arrow-up"></ion-icon></a>
+        <a href="#top" class="arrowUp1"><ion-icon name="arrow-up"></ion-icon></a>
 
     </main>
 
