Major SASS update 2

--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Holive Woodworking</title>
-    <link rel="stylesheet" href="../stylesheets/style.css">
     <link rel="stylesheet" href="../stylesheets/newStyleSass.css">
 
     <!------------------------------ Bootstrap core CSS ------------------------>
@@ -103,8 +102,8 @@
                 </fieldset>
 
                 <section class="buttons">
-                    <button class="button1" type="submit">Send</button>
-                    <button class="button2" type="reset">Clean</button>
+                    <button class="button1 rounded" type="submit">Send</button>
+                    <button class="button2 rounded" type="reset">Clean</button>
                 </section>
         </form>
 
