--- a/pages/store.html
+++ b/pages/store.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Check the equipment that we provide to start builing cool projects">
+    <meta name="keywords" content="store,clothes, tools, products, rip curl, coderhouse, bosch">
     <title>Holive Woodworking</title>
     <link rel="stylesheet" href="../stylesheets/newStyleSass.css">
 
