--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="We develop a consious communuty for woodworking and surfing">
+    <meta name="keywords" content="Woodworking, envirolmenta-friendly, surfboards">
     <title>Holive Woodworking</title>
     <link rel="stylesheet" href="./stylesheets/newStyleSass.css">
 
