--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Fill the form and get in contact with us for anything you need">
+    <meta name="keywords" content="contact us, questions, information">
     <title>Holive Woodworking</title>
     <link rel="stylesheet" href="../stylesheets/newStyleSass.css">
 
