--- a/pages/courses.html
+++ b/pages/courses.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="We offer several courses, from picking up materials for your projects, to how to recycle dispose and make an exellent finish on them">
+    <meta name="keywords" content="courses,sustainable work, use tools, surfboards, furniture ">
     <title>Holive Woodworking</title>
     <link rel="stylesheet" href="../stylesheets/newStyleSass.css">
 
