--- a/pages/videos.html
+++ b/pages/videos.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Take a look on our youtube channel for more content">
+    <meta name="keywords" content="videos, youtube, woodworking">
     <title>Holive woodworking</title>
     <link rel="stylesheet" href="../stylesheets/newStyleSass.css">
 
