--- a/index.html
+++ b/index.html
@@ -41,18 +41,18 @@
             <div class="offcanvas-body mainBackCo fontCoWi">
               <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 navBackCo ulTransparent">
                 <li class="nav-item">
-                    <li><a href="index.html" class="nav-link fontCoWi">Home</a></li>
+                    <li><a href="index.html" class="nav-link fontCoWi colorTransform">Home</a></li>
                 </li>
                 <li class="nav-item">
-                    <li><a  href="pages/store.html" class="nav-link fontCoWi">Store</a></li>
+                    <li><a  href="pages/store.html" class="nav-link fontCoWi colorTransform">Store</a></li>
                 </li>
                 <li class="nav-item">
-                    <li><a  href="pages/courses.html" class="nav-link fontCoWi">Courses</a></li>
+                    <li><a  href="pages/courses.html" class="nav-link fontCoWi colorTransform">Courses</a></li>
                 <li class="nav-item">
-                    <li><a  href="pages/videos.html" class="nav-link fontCoWi">Videos</a></li>
+                    <li><a  href="pages/videos.html" class="nav-link fontCoWi colorTransform">Videos</a></li>
                 </li>
                 <li class="nav-item">
-                    <li><a  href="pages/contact-us.html" class="nav-link fontCoWi">Contact us</a></li>
+                    <li><a  href="pages/contact-us.html" class="nav-link fontCoWi colorTransform">Contact us</a></li>
                 </li>
               </ul>
             </div>
