--- a/pages/courses.html
+++ b/pages/courses.html
@@ -68,7 +68,7 @@
             <div class="card row text-center background-none border-0" style="width: 70%; margin: 0 auto; background: none;">
                 <div class="card-body myGradient rounded-3 boxShadow">
                   <h5 class="card-title display-6">Master the use of tools</h5>
-                  <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore perferendis sed magni ipsum quasi qui repudiandae perspiciatis! Vitae sed dolore perspiciatis quos numquam pariatur possimus explicabo sunt molestiae eum fuga sit expedita, optio repudiandae assumenda minus. Vel odit omnis voluptatem praesentium quam voluptas nostrum facilis facere, quia doloribus sint saepe placeat, exercitationem explicabo minima unde accusantium aperiam porro! Blanditiis porro quo, quis culpa quisquam modi rem eum impedit id! Modi!</p>
+                  <p class="card-text">To get the best results when you are working with wood, it is essential to use the right tool at the right time. You will learn from handtools all the way up to stationary machines, such as planers and tablesaws and the respective safety measures to operate them. Here we offer several courses to teach you and give you all kind of tips to make your work shine. </p>
                   <a href="#" class="btn boxShadow" id="buttonColorBackground">Tool up</a>
                 </div>
               </div>
@@ -78,7 +78,7 @@
             <div class="card row text-center" style="width: 70%; margin: 0 auto; background: none;">
                 <div class="card-body myGradient rounded-3 boxShadow">
                   <h5 class="card-title display-6">Surfboards & Furniture</h5>
-                  <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente nobis a corrupti, cum nemo magnam accusamus tempora labore molestias sit quidem vero, error soluta placeat. Culpa quia quibusdam ex deserunt molestias, sunt aliquid, vero ab illo dolor quidem repellat alias quod, cum consectetur. Harum, qui voluptatem, totam laborum non reiciendis ullam consequatur sequi, quibusdam in error tempore debitis? Architecto provident voluptas, cum nihil cupiditate quae maxime ea quam necessitatibus expedita.</p>
+                  <p class="card-text">If you are the one that loves to jump right into action, this is your place to be. Here you can find a big variety of courses to learn how to build furniture. The difficulty of this courses go from beginners to professional level. But for us it is not only important to make furniture. We are waves-loving people and after a hard day of work (or before) we love catching some waves. That's why we have a special section on how to build wooden surfboards.</p>
                   <a href="#" class="btn boxShadow" id="buttonColorBackground">Catch the wave</a>
                 </div>
               </div>
@@ -88,7 +88,7 @@
             <div class="card row text-center" style="width: 70%; margin: 0 auto; background: none;">
                 <div class="card-body myGradient rounded-3 boxShadow">
                   <h5 class="card-title display-6">Working sustainable</h5>
-                  <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum voluptatem blanditiis nulla earum, iure repellat deserunt alias. Nemo ratione provident optio nostrum debitis quaerat corporis est dignissimos eveniet atque non sequi illum accusantium quos vel, modi ab? Aperiam vitae nihil eligendi fugiat, ea earum dicta natus ipsa voluptates itaque adipisci ratione amet tenetur iure molestiae fuga provident, nulla delectus quidem omnis magnam officiis. Consequuntur nihil aliquid consectetur laudantium blanditiis ipsam?</p>
+                  <p class="card-text">This is the most important part of our beliefs. Nature is the most precius gift of all, and we love it. That's why we dedicate a whole section to make courses about protecting nature as much as we can, inside and outside the workshop. Here you will learn how to select your materials properly and wisely for you and mother nature. Also how to dispose, recycle and store materials.</p>
                   <a href="#" class="btn boxShadow" id="buttonColorBackground">Go green</a>
                 </div>
               </div>
