--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
         <section class="mainStage1">
             <h2 class="bannerMission mb-sm-4 titleBackground boxShadow borderColor">Our mission</h2>
 
-            <p class="interactiveText1 borderColor h-50">Motivate</p>
-            <p class="interactiveText2 borderColor h-50">Be green</p>
-            <p class="interactiveText3 borderColor h-50">Supply</p>
+            <p class="interactiveText1 borderColor">Motivate</p>
+            <p class="interactiveText2 borderColor">Be green</p>
+            <p class="interactiveText3 borderColor">Supply</p>
 
         </section>
        </div>
