--- a/pages/courses.html
+++ b/pages/courses.html
@@ -67,7 +67,7 @@
         <div class="pb-5 pt-5">
             <div class="card row text-center background-none border-0" style="width: 70%; margin: 0 auto; background: none;">
                 <div class="card-body myGradient rounded-3 boxShadow">
-                  <h5 class="card-title display-6">Master the use of tools</h5>
+                  <h5 class="card-title display-6 keyWord">Master the use of tools</h5>
                   <p class="card-text">To get the best results when you are working with wood, it is essential to use the right tool at the right time. You will learn from handtools all the way up to stationary machines, such as planers and tablesaws and the respective safety measures to operate them. Here we offer several courses to teach you and give you all kind of tips to make your work shine. </p>
                   <a href="#" class="btn boxShadow" id="buttonColorBackground">Tool up</a>
                 </div>
@@ -77,7 +77,7 @@
         <div class="pb-5">
             <div class="card row text-center" style="width: 70%; margin: 0 auto; background: none;">
                 <div class="card-body myGradient rounded-3 boxShadow">
-                  <h5 class="card-title display-6">Surfboards & Furniture</h5>
+                  <h5 class="card-title display-6 keyWord">Surfboards & Furniture</h5>
                   <p class="card-text">If you are the one that loves to jump right into action, this is your place to be. Here you can find a big variety of courses to learn how to build furniture. The difficulty of this courses go from beginners to professional level. But for us it is not only important to make furniture. We are waves-loving people and after a hard day of work (or before) we love catching some waves. That's why we have a special section on how to build wooden surfboards.</p>
                   <a href="#" class="btn boxShadow" id="buttonColorBackground">Catch the wave</a>
                 </div>
@@ -87,7 +87,7 @@
         <div class="pb-5">
             <div class="card row text-center" style="width: 70%; margin: 0 auto; background: none;">
                 <div class="card-body myGradient rounded-3 boxShadow">
-                  <h5 class="card-title display-6">Working sustainable</h5>
+                  <h5 class="card-title display-6 keyWord">Working sustainable</h5>
                   <p class="card-text">This is the most important part of our beliefs. Nature is the most precius gift of all, and we love it. That's why we dedicate a whole section to make courses about protecting nature as much as we can, inside and outside the workshop. Here you will learn how to select your materials properly and wisely for you and mother nature. Also how to dispose, recycle and store materials.</p>
                   <a href="#" class="btn boxShadow" id="buttonColorBackground">Go green</a>
                 </div>
